--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,26 @@
       <version>2.17.2</version>
       <scope>test</scope>
     </dependency>
+
+
+    <!--test-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.15</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -408,6 +428,14 @@
         <excludes>
           <exclude>**/*.java</exclude>
         </excludes>
+      </testResource>
+
+      <!--单元测试时引用src/main/resources下的资源文件-->
+      <testResource>
+        <directory>src/test/resources</directory>
+      </testResource>
+      <testResource>
+        <directory>src/main/resources</directory>
       </testResource>
     </testResources>
   </build>
